--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
                 <div class="row">
                     <button id="1" class="btn btn-success col-3 bouton">1</button>
                     <button id="2" class="btn btn-success col-3 bouton">2</button>
-                    <button class="btn btn-success col-3 bouton">3</button>
+                    <button id="3" class="btn btn-success col-3 bouton">3</button>
                     <button id="+" class="btn btn-primary col-3 bouton">+</button>
-                    <button class="btn btn-success col-3 bouton">4</button>
-                    <button class="btn btn-success col-3 bouton">5</button>
-                    <button class="btn btn-success col-3 bouton">6</button>
+                    <button id="4" class="btn btn-success col-3 bouton">4</button>
+                    <button id="5" class="btn btn-success col-3 bouton">5</button>
+                    <button id="6" class="btn btn-success col-3 bouton">6</button>
                     <button id="-" class="btn btn-primary col-3 bouton">-</button>
-                    <button class="btn btn-success col-3 bouton">7</button>
-                    <button class="btn btn-success col-3 bouton">8</button>
-                    <button class="btn btn-success col-3 bouton">9</button>
-                    <button class="btn btn-success col-3 bouton">0</button>
+                    <button id="7" class="btn btn-success col-3 bouton">7</button>
+                    <button id="8" class="btn btn-success col-3 bouton">8</button>
+                    <button id="9" class="btn btn-success col-3 bouton">9</button>
+                    <button id="0" class="btn btn-success col-3 bouton">0</button>
+                    <button id="*" class="btn btn-primary col-6 bouton">*</button>
+                    <button id="clear" class="btn btn-primary col-6 boutonClear">clear</button>
                 </div>
                 <div class="row">
                     <button class="btn btn-warning egal">=</button>
